# metrics

./: .gitignore  Cargo.toml  README.md  TEMP.md  TEMPLATE.md  book.toml  taplo.toml
.github/workflows/: links.yml  pages.yml  rust.yml  typos.yml
_src/: const.rs  lib.rs  localization.rs  macros.rs  main.rs
_src/app/: data.rs  mod.rs
_src/app/computers/: mod.rs
_src/app/panes/: metrics.rs  mod.rs
_src/app/states/: mod.rs  settings.rs  windows.rs
_src/app/widgets/: about copy.rs  about.rs  github.rs  mean_and_standard_deviation.rs  mod.rs  presets.rs  properties.rs
_src/export/: mod.rs  parquet.rs  ron.rs  xlsx.rs
_src/presets/: mod.rs
_src/utils/: _save.rs  hash.rs  layout_job.rs  mod.rs  polars.rs
ftl/: en.ftl  ru.ftl
ftl/en/: _aocs.org.ftl  _indices.ftl  aocs.org.ext.ftl  aocs.org.ftl  generated.ftl  main.ext.ftl  main.ftl  properties.ftl
ftl/ru/: generated.ftl  main.ftl  temp.ftl
pdf/: Overview of clustering methods in R.md  clusterCrit, 2017.md
po/: messages.pot  ru.po  ru.po~
py/: ftl.py  generate_ftl.py  rename_file_by_first_line copy.py  rename_file_by_first_line.py
src/: SUMMARY.md  _distances.py  _distances.rs  const.rs  lib.rs
src/Correlations/: Pearson.md  README.md  Spearman.md
src/Distances/: README.md
src/Distances/DataAnalysis/: AnderbergSimilarity.md  BaroniUrbaniBuserSimilarity.md  BinaryEuclideanDistance.md  BraunBlanquetSimilarity.md  BrayCurtisSimilarity.md  CanberraDistance.md  (+65 more)
src/Metrics/: README.md
src/Moments/: Kurtosis.md  Skewness.md
src/_en/: BrayCurtisDissimilarity.md  ChebyshevDistance.md  CosineSimilarity.md  EuclideanDistance.md  JaccardDistance.md  ManhattanDistance.md  PearsonCorrelationCoefficient.md  SpearmanCorrelationCoefficient.md
src/_ru/: KullbackLeiblerDivergence.md  Metrics.md  WassersteinDistance.md
(+244 files in other folders)
