[package]
name = "metrics"
version = "0.1.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
const_format = "0.2.36"

egui_ext = { git = "https://github.com/kgv/egui_ext", branch = "0.6" }
egui_l20n = { git = "https://github.com/kgv/egui_l20n", branch = "0.6", features = [
    "macros",
] }
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext", branch = "0.4" }
fatty_acid_names_l10n = { git = "https://github.com/ippras/fatty_acid_names_l10n" }
lipid = { git = "https://github.com/ippras/lipid", branch = "bf6a425" }
metadata = { git = "https://github.com/ippras/metadata", branch = "bf6a425", features = [
    "egui",
    "polars",
] }
polars_ext = { git = "https://github.com/kgv/polars_ext", branch = "0.6", features = [
    "array",
] }

maplit = "*"

# linfa = "0.7.1"
# linfa-hierarchical = "0.7.1"
# linfa-kernel = "0.7.1"
# re_ui = "0.22.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", default-features = false, features = [
    "wasm_js",
] }
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.72"
web-sys = "0.3.99"

[features]
default = []
markdown = ["egui_ext/markdown"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
